src/Main/Main.module.scss
@import "./src/common/styles/sass/variables";
@import "./src/common/styles/sass/mixins";

.mainBlock {
  background-color: $bgColor;
  padding: 100px 0;
  position: relative;
  z-index: 2;
  min-height: 100vh;

  .particles {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    z-index: 1;
  }

  .container {
    display: flex;
    justify-content: center;
    position: relative;
    z-index: 1;

    @media screen and (min-width: 874px) {
      justify-content: space-between;
    }

    .greetingText {
      width: 350px;
      color: $descriptionColor;
      @include text($fontDescription, 30px, 1.2, 400);
    }

    .myName {
      color: $primaryColor;
      @include text($fontPrimary, 48px, 1.2, 400);
    }

    .photoContainer {
      position: relative;
      z-index: 5;
      margin-top: 100px;
      @media screen and (min-width: 873px ) {
        margin-top: 80px;
      }

      .border1 {
        position: absolute;
        z-index: 1;
        left: -20px;
        bottom: -10px;
        right: -20px;
        top: -10px;
        border: 1px solid $primaryColor;
        border-radius: 2px;
      }

      .border2 {
        position: absolute;
        z-index: 1;
        left: -10px;
        bottom: -20px;
        right: -10px;
        top: -20px;
        border: 1px solid $primaryColor;
        border-radius: 2px;
      }

      .photo {
        width: 350px;
        height: 400px;
        background-size: cover;
        background-position: center;
        display: flex;
        justify-content: center;
        align-items: center;
        position: relative;
        z-index: 3;
        transition: 0.5s;

        &:hover {
          transform: translate(-20px, -20px);
        }

        &::before {
          @include blackHover(absolute, '', black, 0, 0, 0, 0, 0.4);
        }
      }
    }
  }


}

